# Telegram-RAG-Chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  cicd-errors.txt  docker-compose.yml
.github/workflows/: ci.yml
ml-api/: Dockerfile  ml_api.py  pyproject.toml  test_ml_api.py
telegram-bot/: Dockerfile  pyproject.toml
telegram-bot/app/: __init__.py  config.py  main.py
telegram-bot/app/chunking/: __init__.py  engine.py
telegram-bot/app/database/: __init__.py  qdrant_client.py
telegram-bot/app/handlers/: ask.py  help.py  upload.py
telegram-bot/app/models/: __init__.py  model_factory.py
telegram-bot/app/rag/: cache.py  orchestrator.py
telegram-bot/app/services/: ml_api_client.py
telegram-bot/app/utils/: history.py
telegram-bot/sample_docs/: company_faq.md  product_guide.md  tech_support.md
telegram-bot/tests/: __init__.py  conftest.py  test_cache.py  test_chunking.py  test_config.py  test_handlers.py  test_history.py  test_ml_api_client.py  test_model_factory.py  test_orchestrator.py  test_qdrant.py
